# py_kvdt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Z05123456699_27.01.2024_12.00.con  Z05123456699_27.10.2023_12.00.con  ast.py  devbox.json  fk2satzart.py  kvdt_feld_stm.py  kvdt_fk2satzart.py  kvdt_main.py  kvdt_process.py  kvdt_reader.py  kvdt_satzarten.py  kvdt_token.py  my_token.py  pyproject.toml  rvsa.py  satz_stm.py
.github/workflows/: ci.yml
docs/: index.html  pykvdt.html  search.js
docs/pykvdt/: definitions.html  exceptions.html  generator.html  generator_context.html  model.html  parser.html  reader.html  structures.html  validators.html
legacy/: kvdt_main.py  kvdt_reader.py  kvdt_satzarten.py
satzarten/: 0101.txt  0102.txt  0103.txt  0104.txt  adt0.txt  adt9.txt  besa.txt  con0.txt  con9.txt  rvsa.txt
scripts/: generate_test_data.py  migrate_fields.py  migrate_structures.py
src/pykvdt/: __init__.py  __main__.py  definitions.py  exceptions.py  generator.py  generator_context.py  model.py  parser.py  reader.py  storage.py  structures.py  validators.py
tests/: test_generator.py  test_integration.py  test_parser.py  test_parser_coverage.py  test_reader.py  test_reader_coverage.py  test_storage.py  test_validation_of_test_packages.py  test_validators.py
