[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_kvdt"
version = "1.0.0"
authors = [
  { name="Martin Richardt", email="martin.richardt@googlemail.com" },
]
description = "A flexible KVDT library for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/maatini/py_kvdt"

[tool.ruff]
# Target Python version
target-version = "py38"
line-length = 120

# Include/Exclude rules
extend-exclude = ["legacy"]
force-exclude = true
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "test_packages",
    "test_packages_realistic",
]

[tool.ruff.lint]
# Enable specific rules
select = ["E", "F", "W", "I"]
# Relax rules: ignore line length and import sorting
ignore = ["E501", "I001"]

[tool.black]
line-length = 120
exclude = '''
/(
    legacy
  | \.git
  | \.hg
  | \.pypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
